--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "start": "node app"
   },
   "dependencies": {
-    "express": "2.5.x",
-    "jade": "*",
-    "socket.io": "*"
+    "express": "3.1.x",
+    "jade": "0.28.x",
+    "socket.io": "0.9.x"
   },
   "engines": {
     "node": "0.8.x",
